update db + add password change